--- a/solar_backend/templates/base.jinja2
+++ b/solar_backend/templates/base.jinja2
@@ -47,7 +47,7 @@
     {% endblock %}
     </main>
   {% block footer %}
-  <footer class="footer items-center mt-6 p-4 bg-neutral text-neutral-content flex justify-evenly">
+  <footer class="footer items-center p-4 bg-neutral text-neutral-content flex justify-evenly">
   <aside class="items-center flex-auto">
       <p>Made with ❤️ by<img src="https://wtf-eg.de/images/wtf_logo_white.svg" alt="WTF Logo"></p>
 
