--- a/solar_backend/templates/start.jinja2
+++ b/solar_backend/templates/start.jinja2
@@ -2,7 +2,7 @@
 {% block title %}Deye Hard Verwaltung{% endblock %}
 {% block content %}
 
-    <div class="mx-auto w-full px-4 max-w-7xl">
+    <div class="mx-auto w-full mb-6 px-4 max-w-7xl">
         <!-- Full-width alert -->
         {% if not user.is_verified %}
         <div class="alert alert-warning shadow-lg mt-6">
