--- a/solar_backend/templates/add_inverter.jinja2
+++ b/solar_backend/templates/add_inverter.jinja2
@@ -2,10 +2,10 @@
 {% block title %}Email verifizieren{% endblock %}
 {% block content %}
     <div id="add" hx-ext="response-targets">
-    <div  class="sm:mx-auto sm:w-full sm:max-w-sm">
+    <div class="mx-auto w-full px-2 md:px-4 max-w-sm">
       <h2 class="mt-10 text-3xl font-bold leading-9 tracking-tight"> Wechselrichter hinzufügen</h2>
     </div>
-    <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
+    <div class="mt-10 mx-auto w-full px-2 md:px-4 max-w-sm">
 
     {% if not user %}
       <div class="alert alert-warning mb-4">
