--- a/solar_backend/templates/complete_verify.jinja2
+++ b/solar_backend/templates/complete_verify.jinja2
@@ -1,7 +1,7 @@
 {% extends "base.jinja2" %}
 {% block title %}Registrieren{% endblock %}
 {% block content %}
-<div class="sm:mx-auto sm:w-full sm:max-w-sm">
+<div class="mx-auto w-full px-2 md:px-4 max-w-sm">
 <ul class="steps steps-vertical ">
   <li class="step step-primary"><p><i class="fa-solid fa-user-plus"></i> Registrieren</p></li>
   <li class="step step-primary"><p><i class="fa-solid fa-envelope-circle-check"></i> Email Verifizieren</p></li>
