--- a/solar_backend/templates/new_password.jinja2
+++ b/solar_backend/templates/new_password.jinja2
@@ -1,7 +1,7 @@
 {% extends "base.jinja2" %}
 {% block title %}Login{% endblock %}
 {% block content %}
-    <div class="sm:mx-auto sm:w-full sm:max-w-sm">
+    <div class="mx-auto w-full px-2 md:px-4 max-w-sm">
       <h2 class="mt-10 text-3xl font-bold leading-9 tracking-tight">Passwort Ändern</h2>
     </div>
     <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
