--- a/solar_backend/templates/verify.jinja2
+++ b/solar_backend/templates/verify.jinja2
@@ -2,7 +2,7 @@
 {% block title %}Email verifizieren{% endblock %}
 {% block content %}
 
-    <div class="sm:mx-auto sm:w-full sm:max-w-sm">
+    <div class="mx-auto w-full px-2 md:px-4 max-w-sm">
       <h2 class="mt-10 text-3xl font-bold leading-9 tracking-tight">{% if result %} Erfolgreich {% else %} Fehler {% endif %}</h2>
     </div>
     <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
