Tailwind v4 upgrade was lost in a merge. restored it from commit 7a50cd8

--- a/solar_backend/static/style.css
+++ b/solar_backend/static/style.css
@@ -1,6 +1,15 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+@plugin "daisyui";
+
+@layer utilities {
+  .text-green-700 {
+    color: rgb(21 128 61);
+  }
+
+  .text-red-700 {
+    color: rgb(185 28 28);
+  }
+}
 
 body{
   min-height: 100%;
